add tests anf refactor request params